# prompt-ci

./: .env.example  .gitignore  README.md  promptci.yaml  system.prompt
backend/: app.py  pyproject.toml
backend/agents/: auto_fixer.py  diff_analyst.py  judge.py  reporter.py  test_runner.py
backend/api/: routes.py
backend/config/: settings.py
backend/database/: db.py
backend/tools/: email_tools.py  llm_runner.py
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: apiClient.ts  extension.ts  gitClient.ts  historyProvider.ts  notificationHandler.ts  promptWatcher.ts  sidebarProvider.ts
